--- a/basic_js/package.json
+++ b/basic_js/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   }
